materializer-focused-error.txt
run=https://github.com/szl-holdings/a11oy/actions/runs/29945815691
head=47139a6173b972163f57835cd413215b070a7400
exit=1
--- focused failure tail ---
  File "tests/test_operational_route_contracts.py", line 85
    "RELOCK_ISSUE: "1043"",
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
